// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User snapshot a user menu 1`] = `
<div>
  <a
    class="btn btn-link btn-xs normal-case"
  >
    Sign in / Sign up
  </a>
</div>
`;

exports[`User snapshot a user menu for mobile 1`] = `
<div>
  <div
    class="dropdown dropdown-end sm:hidden"
  >
    <label
      class="btn btn-ghost btn-circle avatar"
      tabindex="0"
    >
      <div
        class="w-6 rounded-full"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
    <ul
      class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-200 rounded-box w-52"
      tabindex="0"
    >
      <li>
        <a
          href="/#"
        >
          Profile
        </a>
      </li>
      <li>
        <a
          href="/#"
        >
          Settings
        </a>
      </li>
      <li>
        <a
          href="/#"
        >
          Logout
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`User snapshot a user menu with a user 1`] = `
<div>
  <div
    class="dropdown dropdown-end"
  >
    <label
      class="btn btn-link btn-xs normal-case text-base-content"
      tabindex="0"
    >
      Hi! 
      <b>
        testUser
      </b>
    </label>
    <ul
      class="menu menu-compact dropdown-content shadow bg-base-300 rounded-box w-52 mt-4"
      tabindex="0"
    >
      <li>
        <a
          href="/#"
        >
          Profile
        </a>
      </li>
      <li>
        <a
          href="/#"
        >
          Settings
        </a>
      </li>
      <li>
        <a
          href="/#"
        >
          Logout
        </a>
      </li>
    </ul>
  </div>
</div>
`;
